# bidirectional-type-checker

./: .clang-tidy  CMakeLists.txt  README.md  ast.h  ast_visitor.h  lib.cpp  main.cpp  type.h  type_constraint.h  type_inference.h  union_find.h
src/: CMakeLists.txt  ast.h  ast_pretty_printer.h  ast_visitor.h  error.h  expr.h  main.cpp  stmt.h  type.h  type_inference.h  union_find.h
tests/: CMakeLists.txt  equality.cpp  type_equality_test.cpp  type_inference_test.cpp  union_find_test.cpp
